Fix modals align

--- a/app/assets/scss/modules/m-modal.scss
+++ b/app/assets/scss/modules/m-modal.scss
@@ -14,6 +14,7 @@
   overflow: auto;
 
   background-color: rgba(black, .9);
+  text-align: left;
 
   &__overlay {
     position: fixed;
